# packages/server/src/tasks/exportOpenAPIDocument.ts
@@ -5,6 +5,7 @@ import { AppModule } from '../app.module';
 import { dump } from 'js-yaml';
 import * as fs from 'fs-extra';
 import * as path from 'path';
+import { RequestMethod } from '@nestjs/common';
 
 const bootstrap = async (): Promise<void> => {
   const modules = Reflect.getMetadata('imports', AppModule);
@@ -18,6 +19,10 @@ const bootstrap = async (): Promise<void> => {
   }).compile();
 
   const app = await testingModule.createNestApplication();
+  // FIXME: 共通化する
+  app.setGlobalPrefix('api', {
+    exclude: [{ path: 'healthz', method: RequestMethod.GET }],
+  });
   const document = SwaggerModule.createDocument(app, swaggerConfig);
 
   const yamlDocument = dump(document, {
